--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # My own git ignores
 *.zip
-.DS_STORE
+.DS_Store
 
 # Vivado
 #########################################################################################################
