changed device name

--- a/FPGA/Photonic_switches/Quartus/stratix10.qsf
+++ b/FPGA/Photonic_switches/Quartus/stratix10.qsf
@@ -1,5 +1,5 @@
 #============================================================
-# Altera DE1-SoC board settings
+# Altera Stratix board settings
 #============================================================
 
 
